tests/error/tracing_errors/linear_drop1.err
Error: Error in comptime function return (at $FILE:6:0)
  | 
4 | 
5 | @guppy.comptime
6 | def test() -> None:
  | ^^^^^^^^^^^^^^^^^^^
7 |     q = qubit()
  | ^^^^^^^^^^^^^^^

Value with non-droppable type `qubit` is leaked by this function

Guppy compilation failed due to 1 previous error
